--- a/backend/knex/seeds/admin_user_seed.ts.example
+++ b/backend/knex/seeds/admin_user_seed.ts.example
@@ -34,15 +34,17 @@ const populateCharacters = async (knex: Knex): Promise<void> => {
       genderId: 1,
       raceId: 1,
       level: 1,
-      health: 1,
-      strength: 1,
-      defence: 1,
-      wisdom: 1,
-      dexterity: 1,
-      intelligence: 1,
-      accuracy: 1,
-      speed: 1,
-      luck: 1,
+      traits: {
+        health: 1,
+        strength: 1,
+        defence: 1,
+        wisdom: 1,
+        dexterity: 1,
+        intelligence: 1,
+        accuracy: 1,
+        speed: 1,
+        luck: 1,
+      },
       professionIds: [1],
     },
   ];
